# ant-sim

./: .gitignore  .gitmodules  CREDITS.md  Cargo.toml  README.md  ant-sim.html  ant_sim.html  build.sh  collect_log_info.py
.cargo/: config.toml
data/1000-ms-timestep/: fps.csv
data/32.0-pher-granularity/: reached_dest.csv
data/64-pher-granularity/: entity_count.csv  fps.csv  reached_dest.csv
data/8.0-pher-granularity/: entity_count.csv  fps.csv
data/actually-store-pher-ids/: entity_count.csv  fps.csv  reached_dest.csv
data/dist-2.0-1.2/: entity_count.csv  fps.csv  reached_dest.csv
data/filtered-pheromone-color-logic/: entity_count.csv  fps.csv  reached_dest.csv
data/lazy-load-pheromones-and-hex-mesh-no-culling/: entity_count.csv  fps.csv  reached_dest.csv
data/lazy-load-pheromones-and-hex-mesh-yes-culling/: entity_count.csv  fps.csv  reached_dest.csv
data/scale-fade-rate-by-time/: entity_count.csv  fps.csv  reached_dest.csv
data/separate-fade-color/: entity_count.csv  reached_dest.csv
data/separate-fade-color/250-ms-timestep/: entity_count.csv  fps.csv  reached_dest.csv
data/test-collection/: entity_count.csv  fps.csv  reached_dest.csv
data/use-hex-mesh/: entity_count.csv  fps.csv  reached_dest.csv
data/wipe-ant-mem/: entity_count.csv  fps.csv  reached_dest.csv
src/: ant.rs  food.rs  lib.rs  main.rs  nest.rs  pheromones.rs
src/network/: ant.rs  food.rs  mod.rs  nest.rs  pheromones.rs
src/wander/: ant.rs  food.rs  mod.rs  nest.rs  pheromones.rs
