[package]
name = "ant-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy = {version = "0.9.0", features = ["dynamic"] }
rand = "0.8.5"

[dependencies]
bevy = "0.9"
rand = "0.8.5"
bevy-inspector-egui = {version = "0.14.0", optional = true}

[features]
default = []
debug = ["bevy-inspector-egui"]
dev = ["bevy/dynamic"]
