[package]
name = "ant-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy = {version = "0.9.0", features = ["dynamic"] , default-features=false}
rand = "0.8.5"

[dependencies]
bevy = "0.9"
bevy = {version = "0.9", default-features=false}
rand = "0.8.5"
# bevy-inspector-egui = {version = "0.14.0", optional = true}
bevy-inspector-egui = {git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "rework"}
iyes_loopless = { version = "0.9.1", features = ["bevy-inspector-egui"] }

[features]
dev = ["bevy/dynamic"]
default = [
  "bevy/bevy_asset",
  "bevy/animation",
  "bevy/render",
  "bevy/png",
  "bevy/x11",
]
winit = [
  "bevy/bevy_winit",
]
wayland = [
    "bevy/wayland"
]
