[package]
name = "ant-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9", default-features=false, features = [
  "bevy_asset",
  # "bevy_core_pipeline",
  "animation",
  # "bevy_gilrs",
  # "bevy_scene",
  "render",
  # "bevy_render",
#   "bevy_core_pipeline",
#   "bevy_pbr",
#   "bevy_gltf",
  # "bevy_render",
  "bevy_sprite",
#   "bevy_text",
#   "bevy_ui",
  "png",
  # "hdr",
  # "vorbis",
  "x11",
]}
rand = "0.8.5"
# bevy-inspector-egui = {version = "0.14.0", optional = true}
bevy-inspector-egui = {git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "rework"}
iyes_loopless = { path = "./crates/iyes_loopless", version = "0.9.1", features = ["bevy-inspector-egui"] }

[features]
dev = ["bevy/dynamic"]
default = [
  "bevy/bevy_asset",
  # "bevy/bevy_core_pipeline",
  "bevy/animation",
  # "bevy/bevy_gilrs",
  # "bevy/bevy_scene",
  # "bevy/render",
  # "bevy/bevy_render",
#   "bevy/bevy_core_pipeline",
#   "bevy/bevy_pbr",
#   "bevy/bevy_gltf",
#   "bevy/bevy_render",
  "bevy/bevy_sprite",
#   "bevy/bevy_text",
#   "bevy/bevy_ui",
  "bevy/png",
  # "bevy/hdr",
  # "bevy/vorbis",
  "bevy/x11",
]

winit = [
  "bevy/bevy_winit",
]

wayland = [
    "bevy/wayland"
]

# Rendering support
# render = [
#   "bevy_internal/bevy_core_pipeline",
#   "bevy_internal/bevy_pbr",
#   "bevy_internal/bevy_gltf",
#   "bevy_internal/bevy_render",
#   "bevy_internal/bevy_sprite",
#   "bevy_internal/bevy_text",
#   "bevy_internal/bevy_ui",
# ]

# Optional bevy crates
# bevy_animation = ["bevy_internal/bevy_animation"]
# bevy_asset = ["bevy_internal/bevy_asset"]
# bevy_audio = ["bevy_internal/bevy_audio"]
# bevy_core_pipeline = ["bevy_internal/bevy_core_pipeline"]
# bevy_dynamic_plugin = ["bevy_internal/bevy_dynamic_plugin"]
# bevy_gilrs = ["bevy_internal/bevy_gilrs"]
# bevy_gltf = ["bevy_internal/bevy_gltf"]
# bevy_pbr = ["bevy_internal/bevy_pbr"]
# bevy_render = ["bevy_internal/bevy_render"]
# bevy_scene = ["bevy_internal/bevy_scene"]
# bevy_sprite = ["bevy_internal/bevy_sprite"]
# bevy_text = ["bevy_internal/bevy_text"]
# bevy_ui = ["bevy_internal/bevy_ui"]
# bevy_winit = ["bevy_internal/bevy_winit"]

# Tracing features
# trace_chrome = ["trace", "bevy_internal/trace_chrome"]
# trace_tracy = ["trace", "bevy_internal/trace_tracy"]
# trace = ["bevy_internal/trace"]
# wgpu_trace = ["bevy_internal/wgpu_trace"]

# Image format support for texture loading (PNG and HDR are enabled by default)
# hdr = ["bevy_internal/hdr"]
# png = ["bevy_internal/png"]
# tga = ["bevy_internal/tga"]
# jpeg = ["bevy_internal/jpeg"]
# bmp = ["bevy_internal/bmp"]
# basis-universal = ["bevy_internal/basis-universal"]
# dds = ["bevy_internal/dds"]
# ktx2 = ["bevy_internal/ktx2"]
# For ktx2 supercompression
# zlib = ["bevy_internal/zlib"]
# zstd = ["bevy_internal/zstd"]

# Audio format support (vorbis is enabled by default)
# flac = ["bevy_internal/flac"]
# mp3 = ["bevy_internal/mp3"]
# vorbis = ["bevy_internal/vorbis"]
# wav = ["bevy_internal/wav"]

# Enable watching file system for asset hot reload
# filesystem_watcher = ["bevy_internal/filesystem_watcher"]

# serialize = ["bevy_internal/serialize"]

# Display server protocol support (X11 is enabled by default)
# wayland = ["bevy_internal/wayland"]
# x11 = ["bevy_internal/x11"]

# Enable rendering of font glyphs using subpixel accuracy
# subpixel_glyph_atlas = ["bevy_internal/subpixel_glyph_atlas"]

# Enable systems that allow for automated testing on CI
# bevy_ci_testing = ["bevy_internal/bevy_ci_testing"]

# Enable the "debug asset server" for hot reloading internal assets
# debug_asset_server = ["bevy_internal/debug_asset_server"]

# Enable animation support, and glTF animation loading
# animation = ["bevy_internal/animation"]
